# cfd-csharp

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  cfd-csharp.sln  package.json
.github/workflows/: check_pre-merge.yml  check_pre-merge_develop.yml  check_pre-merge_master.yml  check_pre-merge_sprint.yml  code_scanner.yml  create_release-and-upload.yml
dotnet_project/CfdCsharpProject/: CfdCsharpProject.csproj
dotnet_project/CfdCsharpProject.CliTests/: CfdCliTestMain.cs  CfdCsharpProject.CliTests.csproj
dotnet_project/CfdCsharpProject.xTests/: CfdCsharpProject.xTests.csproj
dotnet_project/CfdCsharpProject_Core2/: CfdCsharpProject_Core2.csproj
dotnet_project/CfdCsharpProject_Core2.xTests/: CfdCsharpProject_Core2.xTests.csproj
dotnet_project/CfdCsharpTestProject/: .gitignore  CfdCsharpTestProject.csproj
dotnet_project/CfdCsharpTestProject_Core2/: CfdCsharpTestProject_Core2.csproj
local_resource/: external_project_local_setting.config
pc/: cfd-cs.pc.in
src/: Address.cs  BlindFactor.cs  Block.cs  BlockHash.cs  ByteData.cs  ByteData256.cs  CMakeLists.txt  CfdAddress.cs  CfdCoin.cs  CfdCommon.cs  CfdElementsAddress.cs  CfdElementsTransaction.cs  CfdKey.cs  CfdScript.cs  CfdTransaction.cs  CoinSelectionUtil.cs  CoinUtil.cs  ConfidentialAddress.cs  ConfidentialAsset.cs  ConfidentialTransaction.cs  ConfidentialValue.cs  Descriptor.cs  EcdsaAdaptorUtil.cs  ElementsUtxoData.cs  ExtPrivkey.cs  ExtPubkey.cs  HDWallet.cs  OutPoint.cs  Privkey.cs  Pubkey.cs  SchnorrPubkey.cs  SchnorrSignature.cs  SchnorrUtil.cs  Script.cs  ScriptUtil.cs  ScriptWitness.cs  SignParameter.cs  StringUtil.cs  TapBranch.cs  TaprootScriptTree.cs  (+3 more)
src/internal/: CAddress.cs  CCoin.cs  CCommon.cs  CElementsAddress.cs  CElementsTransaction.cs  CKey.cs  CScript.cs  CTransaction.cs  ErrorHandle.cs  NativeMethods.cs  TreeHandle.cs  TxHandle.cs
test/: AddressTest.cs  BlockTest.cs  CMakeLists.txt  CfdAddressTest.cs  CfdConfidentialTransactionTest.cs  CfdDescriptorTest.cs  CfdExtPrivkeyTest.cs  CfdExtPubkeyTest.cs  CfdPrivkeyTest.cs  CfdPubkeyTest.cs  CfdScriptTest.cs  CfdTestMain.cs  CfdUtilTest.cs  CoinSelectionUtilTest.cs  ConfidentialTransactionTest.cs  DescriptorTest.cs  ExtPrivkeyTest.cs  ExtPubkeyTest.cs  HDWalletTest.cs  PrivkeyTest.cs  PubkeyTest.cs  SchnorrTest.cs  ScriptTest.cs  TaprootScriptTreeTest.cs  TransactionTest.cs  UtilTest.cs
tools/: build.bat  build.sh  build_core2.bat  build_core2.sh  build_core3.bat  build_core3.sh  build_cpp_only.bat  build_cpp_only.sh  build_cs_only.bat  build_cs_only_core2.bat  cleanup.bat  cleanup.sh  cleanup_cs.bat  clitest_debug.bat  coverage.bat  formatter.bat  formatter.sh  test.bat  test.sh  test_core2.bat  test_core2.sh  test_core3.bat  test_core3.sh  test_direct.bat  test_direct.sh  test_direct_3.1.bat  test_direct_3.1.sh
